@@ -6,60 +6,7 @@
 
 <P>This appendix provides the release notes for each version of HTMLDOC.
 
-<H2>Changes in HTMLDOC v1.8.24</H2>
-
-<UL>
-
-	<H3 _HD_OMIT_TOC>New Features</H3>
-
-	<li>Added "--overflow" and "--no-overflow" command-line
-	options to show or hide the content-too-large errors;
-	the default is "--no-overflow".</li>
-
-	<li>Added "--header1" command-line option and "HEADER1"
-	page comments to set the page header for the first page
-	of each chapter.</li>
-
-	<li>Added "timing" and "remotebytes" debug data
-	generation.</li>
-
-	<H3 _HD_OMIT_TOC>Changes</H3>
-
-	<li>On Windows, HTMLDOC now logs CGI mode errors to a file
-	called "htmldoc.log" in the Windows temporary
-	directory.</li>
-
-	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
-
-	<li>"$HFIMAGEn" didn't work in a header/footer string.</li>
-
-	<li>HTMLDOC could crash when rendering a table.</li>
-
-	<li>Book files were not used in CGI mode (STR #69)</li>
-
-	<li>Cookies were not sent in HTTP requests (STR #71)</li>
-
-	<li>Table cells were not aligned properly when the ROWSPAN
-	attribute was set to 1 (STR #73)</li>
-
-	<li>HTMLDOC crashed when rendering unresolved hyperlinks in
-	aligned images (STR #62)</li>
-
-	<li>Documented the HTMLDOC_NOCGI environment variable (STR
-	#63)</li>
-
-	<li>HTMLDOC sometimes crashed when rendering tables with
-	background colors (STR #65)</li>
-
-	<li>HTMLDOC would crash when writing encrypted strings
-	longer than 1024 bytes (STR #66)</li>
-
-	<li>HTMLDOC didn't set the data directory when running in
-	CGI mode on Windows.</li>
-
-</UL>
-
-<H2>Changes in HTMLDOC v1.8.24</H2>
+<H2>Changes in HTMLDOC v1.8.25</H2>
 
 <UL>
 
@@ -109,6 +56,9 @@
 
 	<li>HTMLDOC could crash when loading the Symbol.afm file
 	(STR #93)</li>
+
+	<li>HTMLDOC did not always honor HEIGHT attributes in
+	table rows.</li>
 
 </UL>
 
